# IMAGEHARDER

./: .gitmodules  ADDITIONAL_FORMATS.md  AUDIO_HARDENING.md  COCKPIT_INTEGRATION.md  Dockerfile  KERNEL_BUILD.md  LIBSODIUM_EXPLORATION_SUMMARY.md  METEOR_LAKE_BUILD.md  PR_DESCRIPTION.md  README.md  README_POLYGLOT.md  SECURITY.md  benchmark.sh  build.sh  build_all_hardened.sh  build_audio.sh  build_crypto.sh  cargo-deny.toml  docker-compose.yml  generate-sbom.sh  install.sh  load-test.js  mission.md  prometheus.yml  setup-cockpit.sh  verify_meteor_lake.sh
.github/workflows/: fuzzing.yml  security-hardening-ci.yml
builders/: README.md  build_all_hardened.sh  build_extended_formats.sh  integration-tests.sh  test_corpus_generator.sh
config/: hardening-flags.mk  kubernetes-deployment.yaml  seccomp-profile.json
docs/: HARDENING_EXTRAS.md  HARDENING_LIBSODIUM.md  INTEGRATION.md  LIBSODIUM_HARDENING_DSSSL.md  LIBSODIUM_INTEGRATION.md
docs/archive/: LOAD_TESTING.md  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md  README.md  SECURITY_ARCHITECTURE.md  VIDEO_HARDENING.md
grafana-dashboards/: dashboards.yml  datasource.yml  media-processing-dashboard.json  security-monitoring-dashboard.json
image_harden/: Cargo.toml  build.rs  wrapper.c
image_harden/examples/: crypto_demo.rs
image_harden/fuzz/: Cargo.toml
image_harden/fuzz/fuzz_targets/: fuzz_audio.rs  fuzz_avif.rs  fuzz_exif.rs  fuzz_exr.rs  fuzz_flac.rs  fuzz_gif.rs  fuzz_heif.rs  fuzz_icc.rs  fuzz_jpeg.rs  fuzz_jxl.rs  fuzz_mp3.rs  fuzz_opus.rs  fuzz_png.rs  fuzz_svg.rs  fuzz_tiff.rs  fuzz_video_avi.rs  fuzz_video_mkv.rs  fuzz_video_mp4.rs  fuzz_vorbis.rs  fuzz_webp.rs
image_harden/src/: api.rs  lib.rs  main.rs  metrics.rs  metrics_server.rs
image_harden/src/crypto/: derive.rs  encrypt.rs  mod.rs  secure.rs  sign.rs
image_harden/src/formats/: avif.rs  exif.rs  exr.rs  icc.rs  jxl.rs  mod.rs  tiff.rs
image_harden/srcs/: main.rs
