[package]
name = "image_harden"
version = "0.2.0"
edition = "2021"
authors = ["IMAGEHARDER Team"]
description = "Hardened media decoder with comprehensive format support and sandboxing"
license = "MIT"

[dependencies]
# =============================================================================
# Core dependencies
# =============================================================================
thiserror = "1.0"
libseccomp-rs = "0.1"
nix = { version = "0.27", features = ["sched", "process"] }
landlock = "0.4"

# =============================================================================
# Vector graphics (Pure Rust - resvg replaces librsvg)
# =============================================================================
resvg = "0.45"          # SVG renderer (pure Rust, safer than librsvg)
tiny-skia = "0.11"      # 2D rendering backend
usvg = "0.45"           # SVG tree parser
ammonia = "3.3.0"       # HTML/SVG sanitizer

# =============================================================================
# WebAssembly sandbox (for FFmpeg and untrusted codecs)
# =============================================================================
wasmtime = "25"         # WebAssembly runtime
wasmtime-wasi = "25"    # WASI support

# =============================================================================
# Pure Rust audio decoders (memory-safe, no C dependencies)
# =============================================================================
lewton = "0.10"         # Vorbis decoder (pure Rust)
claxon = "0.4"          # FLAC decoder (pure Rust)
minimp3 = "0.5"         # MP3 decoder (Rust wrapper, minimal C)
opus = "0.3"            # Opus decoder
ogg = "0.9"             # Ogg container parser (pure Rust)

# =============================================================================
# Pure Rust image formats (high priority CVE mitigation)
# =============================================================================
webp = "0.2"            # WebP decoder (CVE-2023-4863 mitigation)
libheif-rs = "0.18"     # HEIF/HEIC decoder (iOS/macOS format)

# =============================================================================
# Pure Rust video container parsers (memory-safe)
# =============================================================================
mp4parse = "0.12"       # MP4/MOV parser (Firefox's Rust implementation)
matroska = "0.14"       # MKV/WebM parser (pure Rust EBML)

# =============================================================================
# Observability (Prometheus metrics)
# =============================================================================
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
tiny_http = "0.12"

# =============================================================================
# Cryptography (libsodium) - Optional feature
# =============================================================================
libsodium-sys = { version = "0.2", optional = true }
sodiumoxide = { version = "0.2", optional = true }

# =============================================================================
# Build dependencies (C library bindings generation)
# =============================================================================
[build-dependencies]
bindgen = "0.69"        # Generate Rust FFI bindings from C headers
cc = "1.0"              # C compiler integration
pkg-config = "0.3"      # Find system libraries

# =============================================================================
# Features
# =============================================================================
[features]
default = []
crypto = ["libsodium-sys", "sodiumoxide"]

[[bin]]
name = "image_harden_cli"
path = "src/main.rs"
