[package]
name = "image_harden-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.image_harden]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_png"
path = "fuzz_targets/fuzz_png.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_jpeg"
path = "fuzz_targets/fuzz_jpeg.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_svg"
path = "fuzz_targets/fuzz_svg.rs"
test = false
doc = false
bench = false
