[package]
name = "image_harden-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.image_harden]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_png"
path = "fuzz_targets/fuzz_png.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_jpeg"
path = "fuzz_targets/fuzz_jpeg.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_svg"
path = "fuzz_targets/fuzz_svg.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_mp3"
path = "fuzz_targets/fuzz_mp3.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_vorbis"
path = "fuzz_targets/fuzz_vorbis.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_flac"
path = "fuzz_targets/fuzz_flac.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_audio"
path = "fuzz_targets/fuzz_audio.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_video_mp4"
path = "fuzz_targets/fuzz_video_mp4.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_video_mkv"
path = "fuzz_targets/fuzz_video_mkv.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_video_avi"
path = "fuzz_targets/fuzz_video_avi.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_opus"
path = "fuzz_targets/fuzz_opus.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_webp"
path = "fuzz_targets/fuzz_webp.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_heif"
path = "fuzz_targets/fuzz_heif.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_gif"
path = "fuzz_targets/fuzz_gif.rs"
test = false
doc = false
bench = false

# =============================================================================
# Extended format fuzz targets
# =============================================================================

[[bin]]
name = "fuzz_avif"
path = "fuzz_targets/fuzz_avif.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_jxl"
path = "fuzz_targets/fuzz_jxl.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tiff"
path = "fuzz_targets/fuzz_tiff.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_exr"
path = "fuzz_targets/fuzz_exr.rs"
test = false
doc = false
bench = false

# =============================================================================
# Hidden-path component fuzz targets
# =============================================================================

[[bin]]
name = "fuzz_icc"
path = "fuzz_targets/fuzz_icc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_exif"
path = "fuzz_targets/fuzz_exif.rs"
test = false
doc = false
bench = false
